@@ -190,6 +190,24 @@ public class ImportFromAutoTMX {
 
     private void setTranslation(SourceTextEntry entry, ITMXEntry trans, boolean defaultTranslation,
             TMXEntry.ExternalLinked externalLinked) {
+        if (!didAnyChange) { // check if this call really changes anything
+            TMXEntry oldEntry = defaultTranslation ? project.projectTMX.defaults.get(entry.getSrcText())
+                : project.projectTMX.alternatives.get(entry.getKey());
+            if (oldEntry == null) {
+                if (trans.isTranslated()) {
+                    didAnyChange = true;
+                }                
+            } else if (oldEntry.isTranslated()) {
+                if (! oldEntry.getTranslationText().equals(trans.getTranslationText())) {
+                    didAnyChange = true;
+                }
+            } else {
+                if (trans.isTranslated()) {
+                    didAnyChange = true;
+                }
+            }
+        }
+        
         TMXEntry newTrEntry;
 
         if ((!trans.isTranslated()) && (!trans.hasNote())) {
@@ -199,6 +217,5 @@ public class ImportFromAutoTMX {
             newTrEntry = new TMXEntry(trans, defaultTranslation, externalLinked);
         }
         project.projectTMX.setTranslation(entry, newTrEntry, defaultTranslation);
-        didAnyChange = true;
     }
 }
