@@ -2,7 +2,7 @@
  OmegaT 6.1.0
 ----------------------------------------------------------------------
   22 Enhancement
-  30 Bug fixes
+  31 Bug fixes
 ----------------------------------------------------------------------
 6.1.0 vs 6.0.0
 
@@ -165,6 +165,10 @@
 
   - First session message in log not localised
   https://sourceforge.net/p/omegat/bugs/272/
+
+  - If project memory is updated during load via tm/auto or tm/enforce, set project as modified
+    so that save also updates project_save.tmx
+  https://sourceforge.net/p/omegat/bugs/1185/
 
 ----------------------------------------------------------------------
  OmegaT 6.0.0 (2023-06-19)
